--- a/blurryalerts/Resources/Root.plist
+++ b/blurryalerts/Resources/Root.plist
@@ -218,17 +218,20 @@
 			<key>cell</key>
 			<string>PSLinkCell</string>
 			<key>cellClass</key>
-			<string>HBColorPickerTableCell</string>
-			<key>defaults</key>
-			<string>com.slyfabi.blurryalerts</string>
-			<key>key</key>
-			<string>buttonBackgroundColor</string>
-			<key>default</key>
-			<string>#333333</string>
+			<string>PFSimpleLiteColorCell</string>
+			<key>libcolorpicker</key>
+			<dict>
+				<key>defaults</key>
+				<string>com.slyfabi.blurryalerts</string>
+				<key>key</key>
+				<string>buttonBackgroundColor</string>
+				<key>fallback</key>
+				<string>#333333</string>
+				<key>alpha</key>
+				<false/>
+			</dict>
 			<key>label</key>
 			<string>Background Color</string>
-			<key>showAlphaSlider</key>
-			<false/>
 			<key>PostNotification</key>
 			<string>com.slyfabi.blurryalerts.settingschanged</string>
 		</dict>
@@ -321,17 +324,20 @@
 			<key>cell</key>
 			<string>PSLinkCell</string>
 			<key>cellClass</key>
-			<string>HBColorPickerTableCell</string>
-			<key>defaults</key>
-			<string>com.slyfabi.blurryalerts</string>
-			<key>key</key>
-			<string>buttonDestructiveColor</string>
-			<key>default</key>
-			<string>#990000</string>
+			<string>PFSimpleLiteColorCell</string>
+			<key>libcolorpicker</key>
+			<dict>
+				<key>defaults</key>
+				<string>com.slyfabi.blurryalerts</string>
+				<key>key</key>
+				<string>buttonDestructiveColor</string>
+				<key>fallback</key>
+				<string>#990000</string>
+				<key>alpha</key>
+				<false/>
+			</dict>
 			<key>label</key>
 			<string>Background Color</string>
-			<key>showAlphaSlider</key>
-			<false/>
 			<key>PostNotification</key>
 			<string>com.slyfabi.blurryalerts.settingschanged</string>
 		</dict>
